--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL:mongodb+srv://instagram26244:insta@cluster0.kfvbx6w.mongodb.net/?retryWrites=true&w=majority
 PORT:8080
+SECRET_KEY:sahilkr26244
